--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<#DOCTYPE>
-<html>
-  <p>THis is a page</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home doc</title>
+  <style>
+	  body {background-color:#64B5F6;}
+	</style>
+</head>
+<body>
+  
+</body>
 </html>
