--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 <canvas id="Main_Canvas" width=200 height=200>
-<script src="test/code.js"></script>
+<script src="code.js"></script>
 </body>
 </html>
