--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-<canvas id="Main_Canvas" width=100% height=100%>
+<canvas id="Main_Canvas" width=700 height=500>
 <script src="code.js"></script>
 </body>
 </html>
