Fixed draw colors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home doc</title>
+  <title>3D with webgl</title>
   <style>
 	  body {background-color:#64B5F6;}
 	</style>
